# dms-euro-ncap-poc

./: .gitignore  CMakeLists.txt  README.md
src/: legacy_c_glue.cpp  main.cpp
src/camera/: camera_capture.cpp  camera_capture.h
src/dms/: dms_processor.cpp  dms_processor.hpp  dms_types.hpp  onnx_face_detector.cpp  onnx_face_detector.h  onnx_face_detector.hpp
src/logger/: dms_logger.c  dms_logger.h
src/pipeline/: frame_pipeline.cpp  frame_pipeline.hpp  ring_buffer.hpp
src/utils/: platform.h  ring_buffer.c  ring_buffer.h
